Operator expenses and Advance Model completed

--- a/resources/react/locales/en.json
+++ b/resources/react/locales/en.json
@@ -120,6 +120,7 @@
     "only_cash_collected": "Only Cash Collected",
     "delivery_record": "Delivery",
     "customer_name": "Customer Name",
+    "operator_name": "Operator Name",
     "new_customer": "New Customer",
     "new": "New",
     "name": "Name",
