--- a/resources/react/locales/mr.json
+++ b/resources/react/locales/mr.json
@@ -5,6 +5,7 @@
     "customer": "ग्राहक",
     "delivery_record": "डिलिवरी रेकॉर्ड",
     "customer_name": "ग्राहकाचे नाव",
+    "operator_name": "ऑपरेटरचे नाव",
     "add_selected_products": "ॲड सिलेक्टेड प्रॉडक्टस",
     "new_customer": "नवीन ग्राहक",
     "new": "नवीन ग्राहक",
